--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </script>
         <style>.desktop { background-position: center !important; } </style>
         <noscript>
-            <link rel="stylesheet" href="system/resource/stylesheets/bsod.css">
+            <link rel="stylesheet" href="https://windows96.net/system/resource/stylesheets/bsod.css">
             <div class="error">
                 <div class="container">
                     <div class="title"> WINDOWS 96 </div>
