--- a/index2.html
+++ b/index2.html
@@ -12,32 +12,32 @@
         <meta property="og:title" content="MIKESOFT WINDOWS 96">
         <meta property="og:type" content="website">
         <meta property="og:site_name" content="WINDOWS 96">
-        <meta property="og:image" content="appletouch-icon.png">
+        <meta property="og:image" content="/appletouch-icon.png">
         <meta property="og:description" content="MIKESOFT presents you the latest version of Windows, WINDOWS 96.">
         <meta name="description" content="MIKESOFT presents you WINDOWS 96, the latest release of your favorite operating system!">
         <meta name="keywords" content="windows96,windows,webos,social,pwa,operatingsystem,mikesoft,computer,javascript,html,css">
-        <link rel="apple-touch-icon" href="appletouch-icon.png" id="appletouch_icon">
+        <link rel="apple-touch-icon" href="/appletouch-icon.png" id="appletouch_icon">
         <meta name="apple-mobile-web-app-capable" content="yes">
-        <link rel="icon" sizes="192x192" href="appletouch-icon.png" id="app_icon">
+        <link rel="icon" sizes="192x192" href="/appletouch-icon.png" id="app_icon">
         <!--<link rel="manifest" href="manifest.json" />-->
 
         <!-- Stylesheets -->
-        <link rel="stylesheet" href="normalize.css">
-        <link rel="stylesheet" href="jquery-ui.min.css">
-        <link rel="stylesheet" href="codemirror.css">
+        <link rel="stylesheet" href="/normalize.css">
+        <link rel="stylesheet" href="/jquery-ui.min.css">
+        <link rel="stylesheet" href="/codemirror.css">
 
         <!-- Third party required libs -->
-        <script src="jszip.min.js"></script>
-        <script src="ldb-async.js"></script>
-        <script src="jquery-3.5.1.min.js"></script>
-        <script src="jquery-ui.min.js"></script>
-        <script src="jquerydestroyer.js" bootclean="true"></script>
-        <script src="showdown.min.js"></script>
-        <script src="socket.io.min.js" crossorigin="anonymous"></script>
+        <script src="/jszip.min.js"></script>
+        <script src="/ldb-async.js"></script>
+        <script src="/jquery-3.5.1.min.js"></script>
+        <script src="/jquery-ui.min.js"></script>
+        <script src="/jquerydestroyer.js" bootclean="true"></script>
+        <script src="/showdown.min.js"></script>
+        <script src="/socket.io.min.js" crossorigin="anonymous"></script>
 
         <!-- Kernel loader -->
-        <script src="stage0.js"></script>
-        <script src="kl.js"></script>
+        <script src="/stage0.js"></script>
+        <script src="/kl.js"></script>
     </head>
     <body oncontextmenu="return false;">
         <script bootclean="true">
@@ -88,7 +88,7 @@
                 w96.main();
 
                 /* Analytics and fun stuff */
-                fetch('ct.js', {cache: 'reload'}); // This is a view counter. It collects zero data except increasing a number.
+                fetch('/ct.js', {cache: 'reload'}); // This is a view counter. It collects zero data except increasing a number.
 
                 /* We like data, but if you don't want these analytics, please,
                    go to the System Flags application and disable these there.
